# Internal_web_HR_training

./: .breakpoints  .replit  document_hash.txt  main.py  poppler-23.09.0.tar.xz  pyproject.toml  replit.nix  requirement.txt  requirements.txt
docs/faiss_vectorstore_736bffa4-a23b-4bcd-ba03-d34852c71e30/: index.faiss
faiss_vector_db/: index.faiss  index.pkl
faiss_vectorstore_736bffa4-a23b-4bcd-ba03-d34852c71e30/: index.pkl
poppler-23.09.0/: ChangeLog
poppler-23.09.0/glib/reference/html/: index.html  poppler-Poppler-Features.html
static/: app.js  style.css
temp_files/: recording.webm
templates/: chat.html  index.html  login.html
